--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -172,3 +172,19 @@ input {
   @extend .control-group;
   @extend .error;
 }
+
+/* users index */
+
+.users {
+  list-style: none;
+  margon: 0;
+  li {
+    overflow: auto;
+    padding: 10px o;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+    }
+  }
+}
+
