--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -177,10 +177,10 @@ input {
 
 .users {
   list-style: none;
-  margon: 0;
+  margin: 0;
   li {
     overflow: auto;
-    padding: 10px o;
+    padding: 10px 0;
     border-top: 1px solid $grayLighter;
     &:last-child {
       border-bottom: 1px solid $grayLighter;
@@ -190,15 +190,15 @@ input {
 
 /* microposts */
 
-.micropost {
+.microposts {
   list-style: none;
   margin: 10px 0 0 0;
 
   li {
-    padding: 10px 0;
-    border-top: 1p solid #e8e8e8;
-    }
+    padding: 20px 0;
+    border-top: 1px solid #e8e8e8;
   }
+}
   .content {
     display: block;
   }
@@ -207,7 +207,7 @@ input {
   }
   .gravatar {
     float: left;
-    margin-right:10px;
+    margin-right: 10px;
   }
   aside {
     textarea {
